Fixes #264 - widens the mat-dialog pane so that the selection choices aren't cut off for the repeat sections in supports

--- a/frontend/src/stardrive_material.scss
+++ b/frontend/src/stardrive_material.scss
@@ -302,6 +302,10 @@
       width: 90%;
       height: 90%;
     }
+
+    mat-dialog-container.mat-dialog-container {
+      width: 100vw;
+    }
   }
 
   // MD
@@ -310,6 +314,10 @@
       width: 75%;
       height: 75%;
     }
+
+    mat-dialog-container.mat-dialog-container {
+      width: 90vw;
+    }
   }
 
   // LG
@@ -317,6 +325,10 @@
     .cdk-overlay-wrapper .cdk-overlay-pane {
       width: 75%;
       height: 75%;
+    }
+
+    mat-dialog-container.mat-dialog-container {
+      width: 70vw;
     }
   }
 
